--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monitor PC</title>
+    <title>CPU Monitor</title>
 </head>
 <body>
     <div id="root">       
     </div>    
     
-    <script src="./build/app.js"></script>
+    <script src="./app/app.js"></script>
 </body>
 </html>
